# networking-esp32

./: .cproject  .project  openOCD-debug.launch  sdkconfig.old
main/: CMakeLists.txt  networking-app.c  station_example_main.c
main/http_client/: http_client.c  http_client.h
main/socket_client/: tcp_client_socket.c  tcp_client_socket.h  udp_client_socket.c
main/task_common/: task_common.c  task_common.h
